backend/src/main/main/parser/PmmParser.java
// Generated from C:/Users/34644/OneDrive - Universidad de Oviedo/Tercero - Segundo Cuatrimestre/DLP/Laboratorio/DLP/src/main.java.parser/Pmm.g4 by ANTLR 4.13.2
package parser;

    import ast.*;
    import ast.definition.*;
    import ast.expressions.*;
    import ast.expressions.binary.*;
    import ast.expressions.literal.*;
    import ast.expressions.unary.*;
    import ast.statements.*;
    import ast.types.*;

    import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
    import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, INT_CONSTANT=40, WS=41, ID=42, REAL_CONSTANT=43, CHAR_CONSTANT=44, 
		SINGLE_LINE_COMMENT=45, MULTI_LINE_COMMENT=46;
	public static final int
		RULE_program = 0, RULE_mainDefinition = 1, RULE_definition = 2, RULE_var_definition = 3, 
		RULE_function_definition = 4, RULE_function_parameters = 5, RULE_expression = 6, 
		RULE_expressions = 7, RULE_expressions_optional = 8, RULE_type = 9, RULE_built_in_types = 10, 
		RULE_field = 11, RULE_statement = 12, RULE_block = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "mainDefinition", "definition", "var_definition", "function_definition", 
			"function_parameters", "expression", "expressions", "expressions_optional", 
			"type", "built_in_types", "field", "statement", "block"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'def'", "'main'", "'('", "')'", "'->'", "'None'", "':'", "'{'", 
			"'}'", "','", "';'", "'['", "']'", "'.'", "'-'", "'!'", "'*'", "'/'", 
			"'%'", "'+'", "'>'", "'>='", "'<'", "'<='", "'!='", "'=='", "'&&'", "'||'", 
			"'struct'", "'int'", "'char'", "'double'", "'print'", "'input'", "'='", 
			"'while'", "'if'", "'else'", "'return'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "INT_CONSTANT", "WS", "ID", "REAL_CONSTANT", 
			"CHAR_CONSTANT", "SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public List<Definition> optional = new ArrayList<Definition>();
		public DefinitionContext definition;
		public MainDefinitionContext mainDefinition;
		public MainDefinitionContext mainDefinition() {
			return getRuleContext(MainDefinitionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PmmParser.EOF, 0); }
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(28);
					((ProgramContext)_localctx).definition = definition();
					_localctx.optional.addAll(((ProgramContext)_localctx).definition.ast);
					}
					} 
				}
				setState(35);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(36);
			((ProgramContext)_localctx).mainDefinition = mainDefinition();
			_localctx.optional.add(((ProgramContext)_localctx).mainDefinition.ast);
			setState(38);
			match(EOF);
			((ProgramContext)_localctx).ast =  new Program(_localctx.optional);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainDefinitionContext extends ParserRuleContext {
		public Definition ast;
		public List<VarDefinition> bodyVarDefs = new ArrayList<VarDefinition>();
		public List<Statement> bodyStmt = new ArrayList<Statement>();
		public Token id;
		public Var_definitionContext vd;
		public StatementContext statement;
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<Var_definitionContext> var_definition() {
			return getRuleContexts(Var_definitionContext.class);
		}
		public Var_definitionContext var_definition(int i) {
			return getRuleContext(Var_definitionContext.class,i);
		}
		public MainDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainDefinition; }
	}

	public final MainDefinitionContext mainDefinition() throws RecognitionException {
		MainDefinitionContext _localctx = new MainDefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainDefinition);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(T__0);
			setState(42);
			((MainDefinitionContext)_localctx).id = match(T__1);
			setState(43);
			match(T__2);
			setState(44);
			match(T__3);
			setState(45);
			match(T__4);
			setState(46);
			match(T__5);
			setState(47);
			match(T__6);
			setState(48);
			match(T__7);
			setState(54);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(49);
					((MainDefinitionContext)_localctx).vd = var_definition();
					_localctx.bodyVarDefs.addAll(((MainDefinitionContext)_localctx).vd.ast);
					}
					} 
				}
				setState(56);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 32667521351688L) != 0)) {
				{
				{
				setState(57);
				((MainDefinitionContext)_localctx).statement = statement();
				_localctx.bodyStmt.addAll(((MainDefinitionContext)_localctx).statement.ast);
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			match(T__8);
			((MainDefinitionContext)_localctx).ast =  new FunctionDefinition(
			               ((MainDefinitionContext)_localctx).id.getLine(), ((MainDefinitionContext)_localctx).id.getCharPositionInLine(), (((MainDefinitionContext)_localctx).id!=null?((MainDefinitionContext)_localctx).id.getText():null),
			                    new FunctionType(VoidType.getInstance(), new ArrayList()), _localctx.bodyVarDefs, _localctx.bodyStmt) ;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public Var_definitionContext var_definition;
		public Function_definitionContext function_definition;
		public Var_definitionContext var_definition() {
			return getRuleContext(Var_definitionContext.class,0);
		}
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definition);
		try {
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				((DefinitionContext)_localctx).var_definition = var_definition();
				_localctx.ast.addAll(((DefinitionContext)_localctx).var_definition.ast);
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				((DefinitionContext)_localctx).function_definition = function_definition();
				_localctx.ast.addAll(((DefinitionContext)_localctx).function_definition.ast);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_definitionContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<VarDefinition>();
		public List<Token> tokens = new ArrayList<Token>();
		public Token id1;
		public Token id2;
		public TypeContext type;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(PmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PmmParser.ID, i);
		}
		public Var_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_definition; }
	}

	public final Var_definitionContext var_definition() throws RecognitionException {
		Var_definitionContext _localctx = new Var_definitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			((Var_definitionContext)_localctx).id1 = match(ID);
			_localctx.tokens.add(((Var_definitionContext)_localctx).id1);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__9) {
				{
				{
				setState(78);
				match(T__9);
				setState(79);
				((Var_definitionContext)_localctx).id2 = match(ID);
				_localctx.tokens.add(((Var_definitionContext)_localctx).id2);
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(86);
			match(T__6);
			setState(87);
			((Var_definitionContext)_localctx).type = type();
			setState(88);
			match(T__10);
			_localctx.tokens.stream().forEach(token -> {
			                        if(_localctx.ast.stream().anyMatch(vdef -> vdef.name.equals(token.getText()))) {
			                            new ErrorType(token.getText(), new VarDefinition(token.getLine(),
			                                    token.getCharPositionInLine() + 1, token.getText(), ((Var_definitionContext)_localctx).type.ast));
			                        }

			                        _localctx.ast.add( new VarDefinition(token.getLine(), token.getCharPositionInLine() + 1,
			                                token.getText(), ((Var_definitionContext)_localctx).type.ast ));
			                        });
			                    ;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_definitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public List<VarDefinition> bodyVarDefs = new ArrayList<VarDefinition>();
		public List<Statement> bodyStmt = new ArrayList<Statement>();
		public Token ID;
		public Function_parametersContext function_parameters;
		public Built_in_typesContext built_in_types;
		public Var_definitionContext vd;
		public StatementContext statement;
		public TerminalNode ID() { return getToken(PmmParser.ID, 0); }
		public Function_parametersContext function_parameters() {
			return getRuleContext(Function_parametersContext.class,0);
		}
		public Built_in_typesContext built_in_types() {
			return getRuleContext(Built_in_typesContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<Var_definitionContext> var_definition() {
			return getRuleContexts(Var_definitionContext.class);
		}
		public Var_definitionContext var_definition(int i) {
			return getRuleContext(Var_definitionContext.class,i);
		}
		public Function_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_definition; }
	}

	public final Function_definitionContext function_definition() throws RecognitionException {
		Function_definitionContext _localctx = new Function_definitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_function_definition);
		int _la;
		try {
			int _alt;
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				match(T__0);
				setState(92);
				((Function_definitionContext)_localctx).ID = match(ID);
				setState(93);
				match(T__2);
				setState(94);
				((Function_definitionContext)_localctx).function_parameters = function_parameters();
				setState(95);
				match(T__3);
				setState(96);
				match(T__4);
				{
				setState(97);
				((Function_definitionContext)_localctx).built_in_types = built_in_types();
				}
				setState(98);
				match(T__6);
				setState(99);
				match(T__7);
				setState(105);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(100);
						((Function_definitionContext)_localctx).vd = var_definition();
						_localctx.bodyVarDefs.addAll(((Function_definitionContext)_localctx).vd.ast);
						}
						} 
					}
					setState(107);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 32667521351688L) != 0)) {
					{
					{
					setState(108);
					((Function_definitionContext)_localctx).statement = statement();
					_localctx.bodyStmt.addAll(((Function_definitionContext)_localctx).statement.ast);
					}
					}
					setState(115);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(116);
				match(T__8);
				_localctx.ast.add(new FunctionDefinition(
				                            ((Function_definitionContext)_localctx).ID.getLine(), ((Function_definitionContext)_localctx).ID.getCharPositionInLine() + 1, (((Function_definitionContext)_localctx).ID!=null?((Function_definitionContext)_localctx).ID.getText():null),
				                            new FunctionType( ((Function_definitionContext)_localctx).built_in_types.ast, ((Function_definitionContext)_localctx).function_parameters.ast), _localctx.bodyVarDefs, _localctx.bodyStmt )); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				match(T__0);
				setState(120);
				((Function_definitionContext)_localctx).ID = match(ID);
				setState(121);
				match(T__2);
				setState(122);
				((Function_definitionContext)_localctx).function_parameters = function_parameters();
				setState(123);
				match(T__3);
				setState(124);
				match(T__4);
				setState(125);
				match(T__5);
				setState(126);
				match(T__6);
				setState(127);
				match(T__7);
				setState(133);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(128);
						((Function_definitionContext)_localctx).vd = var_definition();
						_localctx.bodyVarDefs.addAll(((Function_definitionContext)_localctx).vd.ast);
						}
						} 
					}
					setState(135);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 32667521351688L) != 0)) {
					{
					{
					setState(136);
					((Function_definitionContext)_localctx).statement = statement();
					_localctx.bodyStmt.addAll(((Function_definitionContext)_localctx).statement.ast);
					}
					}
					setState(143);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(144);
				match(T__8);
				_localctx.ast.add(new FunctionDefinition(
				                            ((Function_definitionContext)_localctx).ID.getLine(), ((Function_definitionContext)_localctx).ID.getCharPositionInLine() + 1, (((Function_definitionContext)_localctx).ID!=null?((Function_definitionContext)_localctx).ID.getText():null),
				                            new FunctionType( VoidType.getInstance(), ((Function_definitionContext)_localctx).function_parameters.ast), _localctx.bodyVarDefs, _localctx.bodyStmt )); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_parametersContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<VarDefinition>();
		public Token id1;
		public Built_in_typesContext t1;
		public Token id2;
		public Built_in_typesContext t2;
		public List<TerminalNode> ID() { return getTokens(PmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PmmParser.ID, i);
		}
		public List<Built_in_typesContext> built_in_types() {
			return getRuleContexts(Built_in_typesContext.class);
		}
		public Built_in_typesContext built_in_types(int i) {
			return getRuleContext(Built_in_typesContext.class,i);
		}
		public Function_parametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_parameters; }
	}
